# project-chimera

./: .coderabbit.yaml  CLAUD.md  Dockerfile  Makefile  pyproject.toml  que.md  srs.md
.cursor/: rules
.github/workflows/: main.yml
research/: tooling_strategy.md
skills/: README.MD  generate_content.py  publish_video.py  trend_fetcher.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/project_chimera/: __init__.py
tests/: test_generate_content.py  test_publish_video.py  test_skills_interface.py  test_trend_api.py  test_trend_fetcher.py
