# Minimal pyproject.toml for Project Chimera
[tool.poetry]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network – Spec-Driven Architecture"
authors = ["Alemu <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = ">=8.0.0"
reportlab = ">=4.0.0"

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"